# 26a-emb-pra-1-gpio-laracmv

./: CMakeLists.txt
main/: CMakeLists.txt  main.c
